clean up documents

--- a/manuscripts/child-documents/methods.Rmd
+++ b/manuscripts/child-documents/methods.Rmd
@@ -196,7 +196,7 @@ We fit two versions of this model, which differed slightly in their random effec
 
 The fit of the model was assessed using the following diagnostics: Posterior predictive checks---wherein we simulated replicated data under the fitted model and compared these to the observed data---were used to check for systematic differences between the fitted model and observed data [@gelmanetal_BayesianDataAnalysis_2013; @gelmanetal_RegressionOtherStories_2020; @gelmanhill_DataAnalysisUsing_2006]. Randomized quantile residuals plotted against uniform distribution quantiles were used to check for signs of model misspecification [@dunnsmyth_RandomizedQuantileResiduals_1996; @hartiglohse_DHARMaResidualDiagnostics_2022]. Quantiles of the random effects plotted against standard normal distribution quantiles were used to check if the random effects were normally distributed; however, generalized linear mixed effects models have a large degree of robustness against misspecifying the shape of the random effects distribution [see @mccullochneuhaus_MisspecifyingShapeRandom_2011]. Variance Inflation Factors were used to check for multicollinearity between the predictors [@foxmonette_GeneralizedCollinearityDiagnostics_1992; @marcoulidesraykov_EvaluationVarianceInflation_2019; @obrien_CautionRegardingRules_2007], where a value of less than five as indicated low multicollinearity between the predictors, values between five and ten moderate, and values greater than ten high and not tolerable [@jamesetal_IntroductionStatisticalLearning_2021].
 
-After fitting the model we constructed a reference grid using estimated marginal means [@lenthetal_EmmeansEstimatedMarginal_2022; @searleetal_PopulationMarginalMeans_1980], which were back-transformed to the response scale (0-1) for interpretability. The estimated marginal means were then used to estimate the difference in functional connectome similarity within and between participants using pairwise contrasts, as we illustrated in the introduction. Differences were estimated for (1) the overall difference in similarity within and between participants, which we term the *main effect*; (2) the difference in similarity within and between participants for each level of one predictor (e.g., within session similarity) while averaging over levels of the other predictor (e.g., within and between state similarity); (3) the difference in similarity within and between participants for the unique combinations within and between session and state. For any of these contrasts: A difference of zero indicated equal amounts of functional connectome similarity within and between participants, a positive difference indicated more similarity within than between participants, and a negative difference indicated more similarity between than within participants. <!-- These contrasts were the estimands of our model and will be the focus of discussion in the results section. -->
+After fitting the model we constructed a reference grid using estimated marginal means [@lenthetal_EmmeansEstimatedMarginal_2022; @searleetal_PopulationMarginalMeans_1980], which were back-transformed to the response scale (0-1) for interpretability. The estimated marginal means were then used to estimate the difference in functional connectome similarity within and between participants using pairwise contrasts, as we illustrated in the introduction. Differences were estimated for (1) the overall difference in similarity within and between participants, which we term the *main effect*; (2) the difference in similarity within and between participants for each level of one predictor (e.g., within session similarity) while averaging over levels of the other predictor (e.g., within and between state similarity); (3) the difference in similarity within and between participants for the unique combinations within and between session and state. For any of these contrasts: A difference of zero indicated equal amounts of functional connectome similarity within and between participants, a positive difference indicated more similarity within than between participants, and a negative difference indicated more similarity between than within participants.
 
 #### Interpreting group-level contrasts
 
