--- a/manuscripts/supplement/similarity-matrices.Rmd
+++ b/manuscripts/supplement/similarity-matrices.Rmd
@@ -4,7 +4,7 @@ csl: "../apa-6th-edition.csl"
 
 output:
   bookdown::word_document2:
-    reference_docx: "apa6_man.docx"
+    reference_docx: "../apa-template-supplement.docx"
     number_sections: false
 ---
 
