update/add repo links

--- a/manuscripts/child-documents/appendix.Rmd
+++ b/manuscripts/child-documents/appendix.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 
 The supplementary results are separated into four parts. In the first part, we provide the reduced model results of individual-level contrasts estimating the difference in functional connectome similarity within and between participants at various levels of the session and state predictors. In the second part, we provide the reduced model results of our phase coupling analyses when the phase lag index was estimated using the Hilbert transform method. In the third part, we provide the results of our functional connectome similarity analyses derived from the maximal models of functional connectome similarity. In the final part, we provide the results of our functional connectome similarity estimates for amplitude coupling functional connectomes in the delta, theta, beta, and gamma bands.
 
-Additional supplementary results can be found in the Supplementary Material available online (<!-- TODO: add links -->). These include: (1) phase, amplitude, and phase (Hilbert transform) coupling functional connectomes with independent fill scales for all recordings, presented as adjacency matrices rather than connectivity profiles (see Phase Coupling Functional Connectomes, Amplitude Coupling Functional Connectomes, and Phase Coupling Functional Connectomes [Hilbert transform]); (2) larger versions of all the similarity matrices presented in this manuscript, as well as alternate versions of these matrices plotted using the Jet colour scale to facilitate visual comparisons between our results and those of @gordonetal_PrecisionFunctionalMapping_2017 and @grattonetal_FunctionalBrainNetworks_2018 (see Similarity Matrices); (3) model summaries for the reduced and maximal group-level mixed beta regression models (see Model Summaries); and (4) diagnostic plots summarizing the distribution of bad EEG channels and bad segments across recordings (see EEG Preprocessing Diagnostics).
+Additional supplementary results can be found in the Supplementary Material available online at the study's GitHub repository <https://github.com/mccarthy-m-g/mccarthy_EEGNetworkVariants_2024> or Open Science Framework (OSF) repository <https://osf.io/xztdk/> (DOI: <https://doi.org/10.5281/zenodo.6578410>). These include: (1) phase, amplitude, and phase (Hilbert transform) coupling functional connectomes with independent fill scales for all recordings, presented as adjacency matrices rather than connectivity profiles (see Phase Coupling Functional Connectomes, Amplitude Coupling Functional Connectomes, and Phase Coupling Functional Connectomes [Hilbert transform]); (2) larger versions of all the similarity matrices presented in this manuscript, as well as alternate versions of these matrices plotted using the Jet colour scale to facilitate visual comparisons between our results and those of @gordonetal_PrecisionFunctionalMapping_2017 and @grattonetal_FunctionalBrainNetworks_2018 (see Similarity Matrices); (3) model summaries for the reduced and maximal group-level mixed beta regression models (see Model Summaries); and (4) diagnostic plots summarizing the distribution of bad EEG channels and bad segments across recordings (see EEG Preprocessing Diagnostics).
 
 \newpage
 
