clarify the data structure of functional connectomes

--- a/manuscripts/child-documents/introduction.Rmd
+++ b/manuscripts/child-documents/introduction.Rmd
@@ -2,7 +2,7 @@
 
 Human brains, behaviour, and cognition exhibit important differences between and within individuals across the lifespan. A central goal of modern neuroscience is to identify the neural *causes of variation* [@saucematzel_CausesVariationLearning_2013] in human behaviour, cognition, and their dysfunction by characterizing how brain function differs between and within individuals under a variety of conditions using functional magnetic resonance imaging (fMRI), electroencephalography (EEG), and magnetoencephalography (MEG) [for fMRI, see @duboisadolphs_BuildingScienceIndividual_2016; for EEG/MEG, see @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. Each of these neuroimaging modalities measure different aspects of brain function across different spatial and temporal scales (and thus have their own strengths and limitations), however, a common point of interest between them is their application to the study of individual differences in whole brain functional network organization [@duboisadolphs_BuildingScienceIndividual_2016; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020].
 
-Whole brain functional networks are graphs whose *nodes* are either spatially separate brain regions (for fMRI or source-reconstructed EEG/MEG) or sensors (for EEG/MEG) distributed across the entire cerebral cortex,[^1] and whose *edges* quantify the observed statistical dependency between two oscillatory neural signals originating from different nodes in the network. In common neuroscientific parlance, edges in the network represent *functional connectivity* or *coupling* between nodes, subgraphs in the network represent distinct *functional networks*, and the entire graph of the network represents a *functional connectome* [@barchetal_FunctionHumanConnectome_2013; @vanessenetal_HumanConnectomeProject_2012; cf. @spornsetal_HumanConnectomeStructural_2005]. Functional connectomes can be constructed by estimating phase coupling, amplitude coupling, or temporal correlations between all pairs of nodes after band-pass filtering the signals to frequency bands of interest [@bastosschoffelen_TutorialReviewFunctional_2016]. For fMRI studies, functional connectivity is typically estimated using temporal correlations between signals in a single infraslow frequency band (e.g., 0.009-0.08 Hz), resulting in a single functional connectome; whereas for EEG/MEG studies, functional connectivity is typically estimated using phase coupling and/or amplitude coupling in multiple frequency bands over a wide frequency range (e.g., 1-50 Hz) due to neurophysiological signals containing a mixture of distinct neuronal oscillation frequencies, resulting in multiple concurrent functional connectomes [@sadaghianiwirsich_IntrinsicConnectomeOrganization_2020].
+Whole brain functional networks are graphs whose *nodes* are either spatially separate brain regions (for fMRI or source-reconstructed EEG/MEG) or sensors (for EEG/MEG) distributed across the entire cerebral cortex,[^1] and whose *edges* quantify the observed statistical dependency between two oscillatory neural signals originating from different nodes in the network. In common neuroscientific parlance, edges in the network represent *functional connectivity* or *coupling* between nodes, subgraphs in the network represent distinct *functional networks*, and the entire graph of the network represents a *functional connectome* [@barchetal_FunctionHumanConnectome_2013; @vanessenetal_HumanConnectomeProject_2012; cf. @spornsetal_HumanConnectomeStructural_2005]. Functional connectomes can be constructed by estimating phase coupling, amplitude coupling, or temporal correlations between all pairs of nodes after band-pass filtering the signals to frequency bands of interest [@bastosschoffelen_TutorialReviewFunctional_2016], and are typically represented by an adjacency matrix of the weighted edges. For fMRI studies, functional connectivity is typically estimated using temporal correlations between signals in a single infraslow frequency band (e.g., 0.009-0.08 Hz), resulting in a single functional connectome; whereas for EEG/MEG studies, functional connectivity is typically estimated using phase coupling and/or amplitude coupling in multiple frequency bands over a wide frequency range (e.g., 1-50 Hz) due to neurophysiological signals containing a mixture of distinct neuronal oscillation frequencies, resulting in multiple concurrent functional connectomes [@sadaghianiwirsich_IntrinsicConnectomeOrganization_2020].
 
 Over the last two decades, convergent findings from group-averaged fMRI studies have identified that the human functional connectome is governed by an intrinsic functional architecture [@foxetal_HumanBrainIntrinsically_2005; @petersensporns_BrainNetworksCognitive_2015; @raichle_RestlessBrainHow_2015] wherein functional networks exhibit spontaneous coupling between their nodes that can be captured in both the absence and presence of cognitive demands [@poweretal_FunctionalNetworkOrganization_2011; @uddinetal_UniversalTaxonomyMacroscale_2019; @yeoetal_OrganizationHumanCerebral_2011]. Some of these functional networks are most easily detected in the absence of cognitive demands (i.e., in a *resting state*); others are most easily detected in the presence of cognitive demands (i.e., in a *task state*); and some, such as the default mode network [@biswaletal_FunctionalConnectivityMotor_1995; @greiciusetal_FunctionalConnectivityResting_2003; @raichleetal_DefaultModeBrain_2001; @raichlesnyder_DefaultModeBrain_2007], can be easily detected in both resting and task states [@greiciusmenon_DefaultModeActivityPassive_2004; @honeyetal_PredictingHumanRestingstate_2009]. The spatial organization of these *intrinsic connectivity networks* [@seeleyetal_DissociableIntrinsicConnectivity_2007] has been found to be very stable, exhibiting only minor changes under varying cognitive demands [@coleetal_IntrinsicTaskEvokedNetwork_2014; @grattonetal_FunctionalBrainNetworks_2018; @krienenetal_ReconfigurableTaskdependentFunctional_2014], and largely persisting in unconscious states such as sleep [@picchionietal_SleepFunctionalConnectome_2013]. More recent studies using group-averaged and source-reconstructed EEG/MEG or simultaneous fMRI-EEG have also corroborated these findings, implicating that a similar organization of the human functional connectome is present across the full range of oscillatory frequencies that are typically measured with EEG/MEG [@engeletal_IntrinsicCouplingModes_2013; @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020; @wirsichetal_RelationshipEEGFMRI_2021].
 
